# zmey

./: .gitignore  Dockerfile  README.md
core/: CMakeLists.txt
core/base/: CMakeLists.txt  base.h  link.h  messages.cpp  messages.h
core/client/: CMakeLists.txt  zmclient.cpp  zmclient.h  zmey_client.cpp
core/common/: CMakeLists.txt  aux_func.h  connector.h  front.h  json.h  misc.h  queue.h  serial.h  signal_connector.h  tcp.h  timer_delay.h
core/common/src/: aux_func.cpp  front.cpp  jsoncpp.cpp  misc.cpp  serial.cpp  tcp.cpp  tcp_server.cpp  tcp_server.h  tcp_session.h  timer_delay.cpp
core/db_provider/: CMakeLists.txt  db_provider.cpp  db_provider.h
core/db_provider/pg/: pg_change_state_cback.cpp  pg_create_tables.cpp  pg_from_scheduler.cpp  pg_impl.h  pg_other.cpp  pg_scheduler.cpp  pg_task.cpp  pg_task_template.cpp  pg_worker.cpp
core/scheduler/: CMakeLists.txt  application.cpp  application.h  executor.cpp  executor.h  loop.cpp  loop.h  main.cpp
core/scheduler/executor_tasks/: check_workers.cpp  error_notify_handler.cpp  get_new_tasks.cpp  get_prev_tasks.cpp  get_prev_workers.cpp  mess_to_worker.cpp  message_to_db.cpp  ping_to_db.cpp  receive_handler.cpp  task_to_worker.cpp
core/scheduler/tasks/: check_workers.cpp  error_notify_handler.cpp  get_new_tasks.cpp  get_prev_tasks.cpp  get_prev_workers.cpp  message_to_db.cpp  ping_to_db.cpp  receive_handler.cpp  send_notify_handler.cpp  stop_schedr.cpp  task_to_worker.cpp
core/test/: CMakeLists.txt  api_test.cpp  db_schedr_test.cpp  main.cpp
core/worker/: CMakeLists.txt  application.cpp  application.h  executor.cpp  executor.h  loop.cpp  loop.h  main.cpp  process.cpp  process.h
core/worker/executor_tasks/: ping_to_schedr.cpp  receive_handler.cpp  send_notify_handler.cpp  wait_process.cpp
core/worker/tasks/: error_to_schedr.cpp  message_to_schedr.cpp  ping_to_schedr.cpp  progress_to_schedr.cpp  receive_handler.cpp  send_notify_handler.cpp  stop_to_schedr.cpp  update_tasks.cpp  wait_process.cpp
core/zmBase/: structurs.h
core/zmClient/: CMakeLists.txt  zmClient.cpp  zmClient.h
core/zmCommon/: CMakeLists.txt  auxFunc.h  front.h  logger.h  queue.h  signal_connector.h  tcp.h  timerDelay.h  timer_delay.h
core/zmCommon/src/: auxFunc.cpp  aux_func.cpp  serial.cpp  tcp.cpp  tcpClient.h  tcpServer.h  tcpSession.h  tcp_server.cpp  tcp_server.h  tcp_session.cpp  tcp_session.h  timerDelay.cpp  timer_delay.cpp
core/zmDbProvider/: dbPGProvider.cpp  dbProvider.h  db_pg_provider.cpp  db_provider.h
core/zmDbProvider/pg/: pg_change_state_cback.cpp  pg_create_tables.cpp  pg_from_scheduler.cpp  pg_group.cpp  pg_impl.h  pg_other.cpp  pg_pipeline.cpp  pg_pipeline_task.cpp  pg_task.cpp  pg_task_template.cpp  pg_user.cpp  pg_worker.cpp
core/zmDbProvider/src/: dbPGProvider.cpp  dbPGProvider.h  dbProvider.cpp
core/zmScheduler/: application.cpp  application.h  checkStatusWorkers.cpp  check_status_workers.cpp  check_workers.cpp  executor.cpp  executor.h  getNewTaskFromDB.cpp  getPrevTaskFromDB.cpp  getPrevWorkersFromDB.cpp  get_new_task_from_db.cpp  get_new_tasks.cpp  loop.cpp  loop.h  main.cpp  message_to_db.cpp  receiveHandler.cpp  receive_handler.cpp  sendAllMessToDB.cpp  sendHandler.cpp  sendTaskToWorker.cpp  send_all_mess_to_db.cpp  send_handler.cpp  send_task_to_worker.cpp  structurs.h  task_to_worker.cpp
core/zmScheduler/execution/: check_workers.cpp  get_new_tasks.cpp  send_notify_handler.cpp  task_to_worker.cpp
core/zmScheduler/tasks/: check_workers.cpp  get_prev_tasks.cpp  get_prev_workers.cpp  message_to_db.cpp  ping_to_db.cpp  receive_handler.cpp  send_notify_handler.cpp  stop_schedr.cpp  task_to_worker.cpp
core/zmTest/: CMakeLists.txt  apiTest.cpp  api_test.cpp  dbSchedrTest.cpp  db_schedr_test.cpp
core/zmWorker/: application.cpp  application.h  errorToSchedr.cpp  error_to_schedr.cpp  executor.cpp  executor.h  loop.cpp  loop.h  main.cpp  message_to_schedr.cpp  pingToSchedr.cpp  ping_to_schedr.cpp  process.cpp  process.h  progressToSchedr.cpp  progress_to_schedr.cpp  receiveHandler.cpp  receive_handler.cpp  sendHandler.cpp  sendMessToSchedr.cpp  send_handler.cpp  send_mess_to_schedr.cpp  structurs.h  updateListTasks.cpp  update_list_tasks.cpp  update_tasks.cpp  waitProcess.cpp  wait_process.cpp
core/zmWorker/tasks/: error_to_schedr.cpp  message_to_schedr.cpp  ping_to_schedr.cpp  progress_to_schedr.cpp  receive_handler.cpp  (+4 more)
src/: CMakeLists.txt
src/zmAux/: CMakeLists.txt
src/zmAuxFunc/: CMakeLists.txt  tcp.h
src/zmBase/: CMakeLists.txt  structurs.h  zmBase.h
src/zmClient/: CMakeLists.txt  zmClient.cpp  zmClient.h
src/zmCommon/: CMakeLists.txt  auxFunc.h  front.h  logger.h  queue.h  tcp.h  timerDelay.h
src/zmDbProvider/: CMakeLists.txt  dbProvider.h
src/zmFrame/: CMakeLists.txt  stdafx.cpp  zmFrame.cpp  zmFrame.h
src/zmManager/: CMakeLists.txt  main.cpp
src/zmNetworkClient/: stdafx.cpp  zmNetworkClient.cpp
src/zmNetworkServer/: stdafx.cpp  zmNetworkServer.cpp
src/zmScheduler/: CMakeLists.txt  checkStatusWorkers.cpp  dbProvider.cpp  dbProvider.h  dbProviderSQLite.cpp  getAvailableManagers.cpp  getAvailableWorkers.cpp  getManagersFromDB.cpp  getNewManagersFromDB.cpp  getNewTaskFromDB.cpp  getNewWorkersFromDB.cpp  getPrevTaskFromDB.cpp  getPrevWorkers.cpp  getPrevWorkersFromDB.cpp  getWorker.cpp  main.cpp  receiveHandler.cpp  sendAllMessToDB.cpp  sendHandler.cpp  sendStatusToManagers.cpp  sendTaskToWorker.cpp  shared.h  stdafx.h  structurs.h  tcpServer.h
src/zmSenderExample/: main.cpp
src/zmServer/: CMakeLists.txt  zmServer.h
src/zmStream/: CMakeLists.txt  stream.cpp  zmStream.cpp  zmStream.h
src/zmTest/: CMakeLists.txt  apiTest.cpp  dbPGTest.cpp  dbSchedrTest.cpp  dbTest.cpp  main.cpp  prepareTest.h  taskTest.cpp  zmeyTest.cpp
src/zmWorker/: CMakeLists.txt  checkStatusTasks.cpp  childHandler.cpp  errorToSchedr.cpp  main.cpp  pingToSchedr.cpp  process.cpp  process.h  progressToSchedr.cpp  receiveHandler.cpp  sendHandler.cpp  sendMessToSchedr.cpp  stdafx.h  structurs.h  taskStateChangeCBack.cpp  updateListTasks.cpp  waitProcess.cpp
src/zmey/: CMakeLists.txt  zmey.h
(+252 files in other folders)
